--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -4,7 +4,7 @@
 .ImageGallery {
     display: grid;
     max-width: calc(100vw - 48px);
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(calc((100vw - 96px)/4), 1fr));
     grid-gap: 16px;
     margin-top: 0;
     margin-bottom: 0;
